--- a/Vista/Vista/Properties/Resources.resx
+++ b/Vista/Vista/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Farma-Log (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Farma-Log (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tuboEnsayo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tuboEnsayo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
