--- a/Vista/Vista/Properties/Resources.resx
+++ b/Vista/Vista/Properties/Resources.resx
@@ -118,10 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="botonRayas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botonRayas.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Farma-Log (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Farma-Log (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="tuboEnsayo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tuboEnsayo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="botonMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botonMenu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
