--- a/Vista/Vista/Principal.resx
+++ b/Vista/Vista/Principal.resx
@@ -127,7 +127,7 @@
   <data name="bunifuImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAA3NCSVQICAjb4U/gAAAAAXNSR0IArs4c
-        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAE9cAABPXAWNx8pEAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
+        6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAE9YAABPWAbE2EHUAAAAZdEVYdFNvZnR3YXJlAHd3dy5p
         bmtzY2FwZS5vcmeb7jwaAAAtu0lEQVR4Xu3WTZLlSK6k0Rr0EmuPNegl9iDbNVIjE46Au98fkoAZvydy
         RF6iwi9JM4PC/vPXX39t4eP//vvhfx/+T/W/AwDwKs0Wz5j/Vv/7isriarQhH/7fB/3H//3AJQAAcAjN
         FM8W/YdmzRaXgLK4Em2EN0T/8RuXAADA2zRLPFPijNniElAWV6EN8EbEjfmNSwAA4GWaIZ4leb7I8peA
@@ -326,4 +326,7 @@
         rkgb8uF/Hxj+AIBDabZ4xmwx/P/666///H+IQWVhWbVnyAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="bunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>141, 17</value>
+  </metadata>
 </root>
